# slavic_compiler

./: .gitignore  CMakeLists.txt  out  test
docs/: grammar.md
src/: Generator.cpp  Generator.hpp  Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp  arena.hpp  main.cpp  test.asm  test.vxx  тест.русь
